--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://anuhartripathi15:Tj7ePhhNN8t2bv9e@cluster0.0bgvoit.mongodb.net/AuthDatabase"
 JWT_SECRET = anuhar
